--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Home"
+            android:label="Home"/>
+        <activity android:name=".Login_Form"
+            android:label="Log in"/>
+        <activity android:name=".Forgot_Password"
+            android:label="FORGOT PASSWORD"/>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".SignUp"
+            android:label="SignUp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,5 +25,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
 </manifest>
