--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="com.google.android.providers.gsf.permisson.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,20 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.ProfileActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Home"
-            android:label="Home"/>
-        <activity android:name=".Login_Form"
-            android:label="Log in"/>
-        <activity android:name=".Forgot_Password"
-            android:label="FORGOT PASSWORD"/>
+        <activity
+            android:name=".Home"
+            android:label="Home" />
+        <activity
+            android:name=".Login_Form"
+            android:label="Log in" />
+        <activity
+            android:name=".Forgot_Password"
+            android:label="FORGOT PASSWORD" />
         <activity
             android:name=".MapsActivity"
-            android:label="Map"/>
+            android:label="Map" />
         <activity
             android:name=".SignUp"
             android:label="SignUp">
@@ -41,10 +44,5 @@
             </intent-filter>
         </activity>
     </application>
-
-
-<!--    <uses-feature-->
-<!--        android:glEsVersion="0x00020000"-->
-<!--        android:required="true"/>-->
 
 </manifest>
